# life-harness

./: .agentignore  .cursorignore  .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_TOKENS.md  FRONTEND_PASS_SUMMARY.md  FRONTEND_THEME_UPDATE.md  README.md  SECURITY.md  app.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.codex/: hooks.json
services/ai-gateway/: .gitignore  AGENTS.md  README.md  models.yaml  pyproject.toml
services/ai-gateway/app/: __init__.py  bench_models.py  bench_real_phi4.py  bench_runner.py  chat_harness_critic.py  chat_harness_deep.py  chat_harness_draft_generate.py  chat_harness_finalize.py  chat_harness_repair.py  chat_harness_thinking_trace.py  coding_chat.py  coding_fake_backend.py  coding_models.py  coding_semantic.py  coding_stream.py  coding_tools_limits.py  coding_tools_schema.py  coding_transcript.py  config.py  context_packet.py  context_packet_render.py  critic_backend.py  critic_contract.py  deep_synthesis.py  deep_synthesis_openvino.py  eval_runner.py  eval_scorers.py  main.py  model_slots.py  models.py  prompt_loader.py  raw_lab_budget.py  raw_lab_deep_plus.py  raw_lab_meaningfulness_bench.py  raw_lab_self_reflection.py  raw_lab_thread_reflection.py  raw_lab_trace.py  raw_lab_utils.py  synthesis_context.py  synthesis_critic.py  (+5 more)
services/ai-gateway/docs/: ask-harness-openvino-smoke.md  ask-harness-sandbox.md  context-packet-v1.md  evaluation-rubric.md  llamacpp-critic-slot.md  openvino-smoke-report.md  (+2 more)
services/anthropic-compat-gateway/: .gitignore  README.md  pyproject.toml
(+965 files in other folders)
